SERVER-82099 Fix WiredTigerRecordStore searchNear fails on backwards searches with oplog read timestamp