src/mongo/db/catalog/capped_collection_test.cpp
@@ -162,6 +162,11 @@ Status _insertBSON(OperationContext* opCtx, const CollectionPtr& coll, RecordId 
     return collection_internal::insertDocument(opCtx, coll, InsertStatement(obj, id), nullptr);
 }
 
+Status _insertOplogBSON(OperationContext* opCtx, const CollectionPtr& coll, RecordId id) {
+    BSONObj obj = BSON("ts" << Timestamp(id.getLong()));
+    return collection_internal::insertDocument(opCtx, coll, InsertStatement(obj, id), nullptr);
+}
+
 TEST_F(CappedCollectionTest, SeekNear) {
     NamespaceString nss = NamespaceString::createNamespaceString_forTest("local.non.oplog");
     makeCapped(nss);
@@ -624,5 +629,130 @@ TEST_F(CappedCollectionTest, VisibilityAfterRestart) {
         ASSERT_EQ(pastHoleId, next->id);
     }
 }
+
+TEST_F(CappedCollectionTest, SeekNearOplogWithReadTimestamp) {
+    NamespaceString nss = NamespaceString::kRsOplogNamespace;
+    const auto oneSec = Timestamp(1, 0).asULL();
+    {
+        auto [c1, t1] = makeClientAndCtx("t1");
+        WriteUnitOfWork wuow(t1.get());
+        AutoGetCollection ac(t1.get(), nss, MODE_IX);
+        const CollectionPtr& oplog = ac.getCollection();
+        ASSERT_OK(_insertOplogBSON(t1.get(), oplog, RecordId(oneSec + 2)));
+        ASSERT_OK(_insertOplogBSON(t1.get(), oplog, RecordId(oneSec + 4)));
+        ASSERT_OK(_insertOplogBSON(t1.get(), oplog, RecordId(oneSec + 6)));
+        ASSERT_OK(_insertOplogBSON(t1.get(), oplog, RecordId(oneSec + 8)));
+        wuow.commit();
+    }
+#define checkSeekNear(cursor, recordNum, expectedRecordNum)           \
+    do {                                                              \
+        auto record = cursor->seekNear(RecordId(oneSec + recordNum)); \
+        ASSERT(record);                                               \
+        ASSERT_EQ(expectedRecordNum, record->id.getLong() - oneSec);  \
+    } while (0);
+
+    // Forward, no read timestamp.
+    {
+        auto [c2, t2] = makeClientAndCtx("t2");
+        AutoGetCollectionForReadLockFree acr(t2.get(), nss);
+        t2->recoveryUnit()->setOplogVisibilityTs(boost::none);
+        auto cursor = acr.getCollection()->getCursor(t2.get());
+        checkSeekNear(cursor, 1, 2);
+        checkSeekNear(cursor, 2, 2);
+        checkSeekNear(cursor, 3, 2);
+        checkSeekNear(cursor, 4, 4);
+        checkSeekNear(cursor, 5, 4);
+        checkSeekNear(cursor, 6, 6);
+        checkSeekNear(cursor, 7, 6);
+        checkSeekNear(cursor, 8, 8);
+        checkSeekNear(cursor, 9, 8);
+    }
+    // Backward, no read timestamp.
+    {
+        auto [c2, t2] = makeClientAndCtx("t2");
+        AutoGetCollectionForReadLockFree acr(t2.get(), nss);
+        auto cursor = acr.getCollection()->getCursor(t2.get(), false);
+        checkSeekNear(cursor, 1, 2);
+        checkSeekNear(cursor, 2, 2);
+        checkSeekNear(cursor, 3, 4);
+        checkSeekNear(cursor, 4, 4);
+        checkSeekNear(cursor, 5, 6);
+        checkSeekNear(cursor, 6, 6);
+        checkSeekNear(cursor, 7, 8);
+        checkSeekNear(cursor, 8, 8);
+        checkSeekNear(cursor, 9, 8);
+    }
+    // Forward, existing read timestamp.
+    {
+        auto [c2, t2] = makeClientAndCtx("t2");
+        t2->recoveryUnit()->setTimestampReadSource(RecoveryUnit::ReadSource::kProvided,
+                                                   Timestamp(1, 6));
+        AutoGetCollectionForReadLockFree acr(t2.get(), nss);
+        t2->recoveryUnit()->setOplogVisibilityTs(boost::none);
+        auto cursor = acr.getCollection()->getCursor(t2.get());
+        checkSeekNear(cursor, 1, 2);
+        checkSeekNear(cursor, 2, 2);
+        checkSeekNear(cursor, 3, 2);
+        checkSeekNear(cursor, 4, 4);
+        checkSeekNear(cursor, 5, 4);
+        checkSeekNear(cursor, 6, 6);
+        checkSeekNear(cursor, 7, 6);
+        checkSeekNear(cursor, 8, 6);
+        checkSeekNear(cursor, 9, 6);
+    }
+    // Backward, existing read timestamp.
+    {
+        auto [c2, t2] = makeClientAndCtx("t2");
+        t2->recoveryUnit()->setTimestampReadSource(RecoveryUnit::ReadSource::kProvided,
+                                                   Timestamp(1, 6));
+        AutoGetCollectionForReadLockFree acr(t2.get(), nss);
+        auto cursor = acr.getCollection()->getCursor(t2.get(), false);
+        checkSeekNear(cursor, 1, 2);
+        checkSeekNear(cursor, 2, 2);
+        checkSeekNear(cursor, 3, 4);
+        checkSeekNear(cursor, 4, 4);
+        checkSeekNear(cursor, 5, 6);
+        checkSeekNear(cursor, 6, 6);
+        checkSeekNear(cursor, 7, 6);
+        checkSeekNear(cursor, 8, 6);
+        checkSeekNear(cursor, 9, 6);
+    }
+    // Forward, non-existing read timestamp.
+    {
+        auto [c2, t2] = makeClientAndCtx("t2");
+        t2->recoveryUnit()->setTimestampReadSource(RecoveryUnit::ReadSource::kProvided,
+                                                   Timestamp(1, 7));
+        AutoGetCollectionForReadLockFree acr(t2.get(), nss);
+        t2->recoveryUnit()->setOplogVisibilityTs(boost::none);
+        auto cursor = acr.getCollection()->getCursor(t2.get());
+        checkSeekNear(cursor, 1, 2);
+        checkSeekNear(cursor, 2, 2);
+        checkSeekNear(cursor, 3, 2);
+        checkSeekNear(cursor, 4, 4);
+        checkSeekNear(cursor, 5, 4);
+        checkSeekNear(cursor, 6, 6);
+        checkSeekNear(cursor, 7, 6);
+        checkSeekNear(cursor, 8, 6);
+        checkSeekNear(cursor, 9, 6);
+    }
+    // Backward, non-existing read timestamp.
+    {
+        auto [c2, t2] = makeClientAndCtx("t2");
+        t2->recoveryUnit()->setTimestampReadSource(RecoveryUnit::ReadSource::kProvided,
+                                                   Timestamp(1, 7));
+        AutoGetCollectionForReadLockFree acr(t2.get(), nss);
+        auto cursor = acr.getCollection()->getCursor(t2.get(), false);
+        checkSeekNear(cursor, 1, 2);
+        checkSeekNear(cursor, 2, 2);
+        checkSeekNear(cursor, 3, 4);
+        checkSeekNear(cursor, 4, 4);
+        checkSeekNear(cursor, 5, 6);
+        checkSeekNear(cursor, 6, 6);
+        checkSeekNear(cursor, 7, 6);
+        checkSeekNear(cursor, 8, 6);
+        checkSeekNear(cursor, 9, 6);
+    }
+}
+
 }  // namespace
 }  // namespace mongo
